# VidFingerprint

./: BENCHMARK_RESULTS.md  CMakeLists.txt  Dockerfile  README.md  TECHNICAL_OVERVIEW.md  benchmark_concurrency.cpp  benchmark_performance.cpp  build.sh  database_manager.cpp  database_manager.h  matcher_service.cpp  matcher_service.h  metrics.cpp  metrics.h  test_database.cpp  test_fingerprint.cpp  test_matcher.cpp  thread_pool.cpp  thread_pool.h
benchmarks/: benchmark_concurrency.cpp  benchmark_performance.cpp  benchmark_profiled.cpp
include/core/: fingerprint_generator.h
include/database/: database_manager.h
include/matcher/: matcher_service.h
include/utils/: profiler.h
src/: main.cpp
src/core/: fingerprint_generator.cpp
src/database/: database_manager.cpp
src/matcher/: matcher_service.cpp
src/monitoring/: metrics.cpp
src/utils/: profiler.cpp
tests/: test_fingerprint.cpp
